crowdsource/style.css
html, body {
	width: 100%;
	height: 100%; 
	font-family: "Trebuchet MS", Helvetica, sans-serif;
}

body {
	background: -moz-radial-gradient(center, ellipse cover,  rgba(252,255,252,0.5) 0%, rgba(81,159,255,0.44) 100%); /* FF3.6+ */
	background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,rgba(252,255,252,0.5)), color-stop(100%,rgba(81,159,255,0.44))); /* Chrome,Safari4+ */
	background: -webkit-radial-gradient(center, ellipse cover,  rgba(252,255,252,0.5) 0%,rgba(81,159,255,0.44) 100%); /* Chrome10+,Safari5.1+ */
	background: -o-radial-gradient(center, ellipse cover,  rgba(252,255,252,0.5) 0%,rgba(81,159,255,0.44) 100%); /* Opera 12+ */
	background: -ms-radial-gradient(center, ellipse cover,  rgba(252,255,252,0.5) 0%,rgba(81,159,255,0.44) 100%); /* IE10+ */
	background: radial-gradient(ellipse at center,  rgba(252,255,252,0.5) 0%,rgba(81,159,255,0.44) 100%); /* W3C */
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#80fcfffc', endColorstr='#70519fff',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
}

#login_table {
	display: none;
	border-radius: .4em;
	background: #A4A4A4;
	margin-top: .5em;
	font-size: .6em;
	padding: .5em;
	width: 25%;
	position: relative;
	left: 75%; top: 0%;
	z-index: 1;
}

#login_table td {

}

#header_bar {
	padding: 0em;
	position: absolute;
	right: 1em; top: 0em;
	z-index: 1;
}

#header td {
	padding: .5em;
	text-align: right;
	margin: 0em;

}

#header_bar {
	font-weight: bold;
	width: 100%;
	font-size: 1.5em;
	text-align: right;
	padding: 1em;
	color: #610B21;
}

a.header {
	color: #610B21;
	text-decoration: none;
}

a.header:hover {
	text-decoration: underline;
}

a.goButton {
	color: black;
	font-weight: bold;
	text-decoration: none;
	border-radius: .5em;
	padding: .5em;
	background: #3ADF00;
}

a.goButton:hover {
	background: #40FF00;
}

